--- a/index.html
+++ b/index.html
@@ -140,23 +140,23 @@
 </head>
 <body>
   <div id="overlay"></div>
-  <img id="background-gif" src="gfps_wt_herp_Loop_2s.gif" alt="Background GIF"> 
+  <img id="background-gif" src="bg.gif" alt="Background GIF"> 
 
   <h1 id="heading">Your Main Heading</h1>
 
   <div id="container">
     <div id="image-container">
-      <img id="centered-image" src="159864782_2ed585d629_o.jpg" alt="Top Image"> 
+      <img id="centered-image" src="clam.jpg" alt="Top Image"> 
     </div>
 
     <div id="dropdown-container">
       <h2 id="dropdown-heading">Guess The Animal</h2>
       <select id="dropdown" onchange="checkSelection()">
         <option value="" disabled selected hidden>Select an option</option>
-        <option value="Option1">Shark</option>
+        <option value="Option1">Nudibranch</option>
         <option value="Option2">Sea Urchin</option>
         <option value="Option3">Shrimp</option>
-        <option value="Option4">Nudibranch</option>
+        <option value="Option4">Clam</option>
         <option value="Option5">Squid</option>
       </select>
       <div id="message"></div>
