--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     #newPageButton {
       margin-top: 20px;
       padding: 10px;
-      background-color: #4CAF50;
+      background-color: #4c5baf;
       color: white;
       text-decoration: none;
       border: none;
@@ -142,7 +142,7 @@
   <div id="overlay"></div>
   <img id="background-gif" src="bg.gif" alt="Background GIF"> 
 
-  <h1 id="heading">Your Main Heading</h1>
+  <h1 id="heading">Interactive Guessing Game</h1>
 
   <div id="container">
     <div id="image-container">
