--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 </head>
 <body>
   <div id="overlay"></div>
-  <img id="background-gif" src="bg.gif" alt="Background GIF"> 
+  <img id="background-gif" src="back.gif" alt="Background GIF"> 
 
   <h1 id="heading">Interactive Guessing Game</h1>
 
