--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
       border: none;
       border-radius: 5px;
       cursor: pointer;
+      z-index: 3; 
     }
   </style>
 	
@@ -167,3 +168,4 @@
 	
 </body>
 </html>
+
