--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
       height: auto;
     }
 
+    #background-video {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: 0;
+    }
+	  
     #dropdown-container {
       width: 50%;
       display: flex;
@@ -141,7 +151,10 @@
 </head>
 <body>
   <div id="overlay"></div>
-  <img id="background-gif" src="back.gif" alt="Background GIF"> 
+  <video id="background-video" loop muted autoplay>
+    <source src="background.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
 
   <h1 id="heading">Interactive Guessing Game</h1>
 
