--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       justify-content: center;
       color: white;
       overflow: hidden; 
-      background: url('your-background-image.jpg') no-repeat center center fixed; 
+      background: url('water.jpg') no-repeat center center fixed; 
       background-size: cover;
     }
 
@@ -43,7 +43,7 @@
     #centered-image {
       display: block;
       margin: 0 auto;
-      border: 2px solid white; 
+      border: 4px solid white; 
       max-width: 100%;
       height: auto;
     }
@@ -82,9 +82,9 @@
       var correctOption = 'Option1';
 
       if (selectedOption === correctOption) {
-        message.innerHTML = 'Correct option selected!';
+        message.innerHTML = 'Correct answer!';
       } else {
-        message.innerHTML = 'Incorrect option selected. Please try again.';
+        message.innerHTML = 'Incorrect answer';
       }
     }
   </script>
@@ -94,16 +94,16 @@
 
   <div id="container">
     <div id="image-container">
-      <img id="centered-image" src="your-top-image.jpg" alt="Top Image"> 
+      <img id="centered-image" src="Urchin.jpg" alt="Top Image"> 
     </div>
 
     <div id="dropdown-container">
       <h2 id="dropdown-heading">Dropdown Heading</h2>
       <select id="dropdown" onchange="checkSelection()">
-        <option value="Option1">Option 1</option>
-        <option value="Option2">Option 2</option>
-	<option value="Option1">Option 1</option>
-        <option value="Option2">Option 2</option>
+        <option value="Option1">Sea Horse</option>
+        <option value="Option2">Shrimp</option>
+	<option value="Option1">Sea Urchin</option>
+        <option value="Option2">Nudibranch</option>
       </select>
     </div>
   </div>
