--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
 
     <div id="dropdown-container">
-      <h2 id="dropdown-heading">Dropdown Heading</h2>
+      <h2 id="dropdown-heading"></h2>
       <select id="dropdown" onchange="checkSelection()">
         <option value="Option1">Sea Horse</option>
         <option value="Option2">Shrimp</option>
