--- a/index2.html
+++ b/index2.html
@@ -116,6 +116,7 @@
     <div id="dropdown-container">
       <h2 id="dropdown-heading">Guess The Animal</h2>
       <select id="dropdown" onchange="checkSelection()">
+	      <option value="" disabled selected hidden>Select an option</option>
         <option value="Option2">Sea Horse</option>
         <option value="Option1">Shrimp</option>
 	<option value="Option4">Sea Urchin</option>
