--- a/index5.html
+++ b/index5.html
@@ -116,6 +116,7 @@
     <div id="dropdown-container">
       <h2 id="dropdown-heading">Guess The Animal</h2>
       <select id="dropdown" onchange="checkSelection()">
+	      <option value="" disabled selected hidden>Select an option</option>
         <option value="Option1">Sea Horse</option>
         <option value="Option2">Shrimp</option>
 	<option value="Option3">Nudibranch</option>
