--- a/index4.html
+++ b/index4.html
@@ -129,7 +129,7 @@
 </head>
 <body>
   <div id="overlay"></div>
-<h1 id="heading">Your Main Heading</h1>
+<h1 id="heading">Guess Me</h1>
   <div id="container">
     <div id="image-container">
       <img id="centered-image" src="whale.jpg" alt="Top Image"> 
